--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,17 +29,16 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "20"
-          cache: "yarn"
+          cache: "pnpm"
           cache-dependency-path: |
-            Frontend/App/yarn.lock
-            backend/storage/addons/billingcore/Frontend/App/yarn.lock
+            Frontend/App/pnpm-lock.yaml
+            backend/storage/addons/billingcore/Frontend/App/pnpm-lock.yaml
 
-      - name: Setup Yarn
-        run: |
-          corepack enable
-          corepack prepare yarn@stable --activate
-          # Ensure we're using Yarn 4.x compatible commands
-          yarn --version
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: latest
+          run_install: false
 
       - name: Determine plugin directory
         id: plugin_dir
