--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -258,11 +258,12 @@ jobs:
           CHANGELOG_TEXT=$(echo "${CHANGELOG_TEXT}" | tr '\n' ' ' | sed 's/  */ /g')
 
           # Upload using curl with multipart form data
+          # Include ghagent cookie to bypass Cloudflare WAF
           RESPONSE=$(curl -s -w "\n%{http_code}" -X POST \
             "https://cloud.mythical.systems/api/user/packages/${{ steps.metadata.outputs.package_id }}/versions" \
             -H "accept: application/json, text/plain, */*" \
             -H "User-Agent: GitHub Runner" \
-            -H "Cookie: remember_token=${API_TOKEN}" \
+            -H "Cookie: remember_token=${API_TOKEN}; ghagent=1" \
             -H "x-team-uuid: ${TEAM_UUID}" \
             -F "file=@${EXPORT_FILE}" \
             -F "version=${{ steps.metadata.outputs.version }}" \
