--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -258,13 +258,14 @@ jobs:
           CHANGELOG_TEXT=$(echo "${CHANGELOG_TEXT}" | tr '\n' ' ' | sed 's/  */ /g')
 
           # Upload using curl with multipart form data
-          # Include ghagent cookie to bypass Cloudflare WAF
           RESPONSE=$(curl -s -w "\n%{http_code}" -X POST \
             "https://cloud.mythical.systems/api/user/packages/${{ steps.metadata.outputs.package_id }}/versions" \
             -H "accept: application/json, text/plain, */*" \
             -H "User-Agent: GitHub Runner" \
-            -H "Cookie: remember_token=${API_TOKEN}; ghagent=1" \
+            -H "Cookie: ghagent=1; remember_token=${API_TOKEN}" \
             -H "x-team-uuid: ${TEAM_UUID}" \
+            -H "Referer: https://github.com/${{ github.repository }}" \
+            -H "Origin: https://github.com" \
             -F "file=@${EXPORT_FILE}" \
             -F "version=${{ steps.metadata.outputs.version }}" \
             -F "changelog=${CHANGELOG_TEXT}" \
@@ -275,6 +276,10 @@ jobs:
 
           HTTP_CODE=$(echo "${RESPONSE}" | tail -n1)
           BODY=$(echo "${RESPONSE}" | sed '$d')
+
+          # Debug output
+          echo "::debug::HTTP Response Code: ${HTTP_CODE}"
+          echo "::debug::Response preview: $(echo "${BODY}" | head -c 500)"
 
           if [ "${HTTP_CODE}" -ge 200 ] && [ "${HTTP_CODE}" -lt 300 ]; then
             echo "::notice::Plugin uploaded successfully! (HTTP ${HTTP_CODE})"
