--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,11 +25,16 @@ jobs:
         with:
           fetch-depth: 0
 
+
+      
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
           version: latest
           run_install: false
+      
+      - name: Bypass Cloudflare for Github Action
+        uses: xiaotianxt/bypass-cloudflare-for-github-action@v2.0.1
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
