--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,16 +25,18 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Bypass Cloudflare for API Access
+        uses: xiaotianxt/bypass-cloudflare-for-github-action@v2.0.1
+        with:
+          cf_account_id: ${{ secrets.CF_ACCOUNT_ID }}
+          cf_zone_id: ${{ secrets.CF_ZONE_ID }}
+          cf_api_token: ${{ secrets.CF_API_TOKEN }}
 
-      
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
           version: latest
           run_install: false
-      
-      - name: Bypass Cloudflare for Github Action
-        uses: xiaotianxt/bypass-cloudflare-for-github-action@v2.0.1
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
