--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -217,7 +217,7 @@ jobs:
           echo "${CHANGELOG}" >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
 
-      - name: Disable Cloudflare Bot Fight Mode
+      - name: Disable Cloudflare Bot Management Fight Mode
         env:
           CF_ZONE_ID: ${{ secrets.CF_ZONE_ID }}
           CF_API_TOKEN: ${{ secrets.CF_API_TOKEN }}
@@ -227,22 +227,23 @@ jobs:
             exit 0
           fi
 
-          echo "Disabling Cloudflare Bot Fight Mode..."
-          RESPONSE=$(curl -s -X PATCH \
-            "https://api.cloudflare.com/client/v4/zones/${CF_ZONE_ID}/settings/bot_fight_mode" \
+          echo "Disabling Cloudflare Bot Management Fight Mode..."
+          # Use the Bot Management endpoint (not bot_fight_mode settings)
+          RESPONSE=$(curl -s -X PUT \
+            "https://api.cloudflare.com/client/v4/zones/${CF_ZONE_ID}/bot_management" \
             -H "Authorization: Bearer ${CF_API_TOKEN}" \
             -H "Content-Type: application/json" \
-            --data '{"value":"off"}')
-
+            --data '{"fight_mode":false}')
+          
           if echo "${RESPONSE}" | grep -q '"success":true'; then
-            echo "Bot Fight Mode disabled successfully"
+            echo "Bot Management Fight Mode disabled successfully"
           else
-            echo "::warning::Failed to disable Bot Fight Mode: ${RESPONSE}"
+            echo "::warning::Failed to disable Bot Management Fight Mode: ${RESPONSE}"
             echo "::warning::Error code 9109 means API token lacks permissions"
             echo "::warning::Continuing anyway - upload may work if WAF rules allow it"
           fi
-
-          echo "Waiting 5 seconds for Bot Fight Mode to fully disable..."
+          
+          echo "Waiting 5 seconds for Bot Management Fight Mode to fully disable..."
           sleep 5
 
       - name: Upload to Cloud API
@@ -324,7 +325,7 @@ jobs:
             exit 1
           fi
 
-      - name: Re-enable Cloudflare Bot Fight Mode
+      - name: Re-enable Cloudflare Bot Management Fight Mode
         if: always()
         env:
           CF_ZONE_ID: ${{ secrets.CF_ZONE_ID }}
@@ -335,29 +336,18 @@ jobs:
             exit 0
           fi
 
-          echo "Re-enabling Cloudflare Bot Fight Mode..."
-          RESPONSE=$(curl -s -X PATCH \
-            "https://api.cloudflare.com/client/v4/zones/${CF_ZONE_ID}/settings/bot_fight_mode" \
+          echo "Re-enabling Cloudflare Bot Management Fight Mode..."
+          # Use the Bot Management endpoint (not bot_fight_mode settings)
+          RESPONSE=$(curl -s -X PUT \
+            "https://api.cloudflare.com/client/v4/zones/${CF_ZONE_ID}/bot_management" \
             -H "Authorization: Bearer ${CF_API_TOKEN}" \
             -H "Content-Type: application/json" \
-            --data '{"value":"on"}')
-
+            --data '{"fight_mode":true}')
+          
           if echo "${RESPONSE}" | grep -q '"success":true'; then
-            echo "Bot Fight Mode re-enabled successfully"
+            echo "Bot Management Fight Mode re-enabled successfully"
           else
-            echo "::warning::Failed to re-enable Bot Fight Mode: ${RESPONSE}"
-            echo "::warning::Attempting alternative method..."
-            # Try alternative endpoint
-            RESPONSE=$(curl -s -X PUT \
-              "https://api.cloudflare.com/client/v4/zones/${CF_ZONE_ID}/settings/bot_fight_mode" \
-              -H "Authorization: Bearer ${CF_API_TOKEN}" \
-              -H "Content-Type: application/json" \
-              --data '{"value":"on"}')
-            if echo "${RESPONSE}" | grep -q '"success":true'; then
-              echo "Bot Fight Mode re-enabled successfully (alternative method)"
-            else
-              echo "::warning::Both methods failed: ${RESPONSE}"
-            fi
+            echo "::warning::Failed to re-enable Bot Management Fight Mode: ${RESPONSE}"
           fi
 
       - name: Upload artifact
