--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -340,30 +340,21 @@ jobs:
             exit 1
           fi
 
-          # Use python to ensure proper JSON encoding (handles quotes correctly)
-          # This re-encodes the JSON to ensure it's properly formatted
-          DEP_TEMP=$(mktemp)
-          echo "${DEPENDENCIES_JSON}" | python3 -c "import sys, json; print(json.dumps(json.load(sys.stdin)), end='')" > "${DEP_TEMP}" 2>/dev/null || printf '%s' "${DEPENDENCIES_JSON}" > "${DEP_TEMP}"
+          # Ensure JSON is properly formatted (re-encode with python to guarantee valid JSON)
+          FINAL_DEPENDENCIES_JSON=$(echo "${DEPENDENCIES_JSON}" | python3 -c "import sys, json; print(json.dumps(json.load(sys.stdin)), end='')" 2>/dev/null || echo "${DEPENDENCIES_JSON}")
 
-          # Verify the file content matches expected format
-          echo "Dependencies file content: $(cat ${DEP_TEMP})"
-          echo "File size: $(wc -c < ${DEP_TEMP}) bytes"
-
-          # Verify JSON is still valid after file write
-          if ! cat "${DEP_TEMP}" | python3 -m json.tool > /dev/null 2>&1; then
-            echo "::error::JSON became invalid after file write"
-            echo "Content: $(cat ${DEP_TEMP})"
-            rm -f "${DEP_TEMP}"
+          # Final validation
+          if ! echo "${FINAL_DEPENDENCIES_JSON}" | python3 -m json.tool > /dev/null 2>&1; then
+            echo "::error::Final JSON validation failed: ${FINAL_DEPENDENCIES_JSON}"
             exit 1
           fi
 
-          # Show hex dump to verify quotes are present
-          echo "Hex dump of file content:"
-          cat "${DEP_TEMP}" | od -c | head -3
+          echo "Final dependencies JSON to send: ${FINAL_DEPENDENCIES_JSON}"
+          echo "JSON length: ${#FINAL_DEPENDENCIES_JSON}"
 
           # Upload using curl with multipart form data
-          # Use @ to read file content as form data value (not file upload)
-          # Note: curl's -F with @ reads the file content as the form field value
+          # Send dependencies directly as form field value (not via file)
+          # Use printf to ensure exact string is passed without shell interpretation
           RESPONSE=$(curl -s -w "\n%{http_code}" -X POST \
             "https://cloudrelay.mythicalsystems.xyz/api/user/packages/${{ steps.metadata.outputs.package_id }}/versions" \
             -H "accept: application/json, text/plain, */*" \
@@ -374,13 +365,10 @@ jobs:
             -F "file=@${EXPORT_FILE}" \
             -F "version=${{ steps.metadata.outputs.version }}" \
             -F "changelog=${CHANGELOG_TEXT}" \
-            -F "dependencies=@${DEP_TEMP}" \
+            -F "dependencies=${FINAL_DEPENDENCIES_JSON}" \
             -F "min_panel_version=${{ steps.metadata.outputs.min_panel_version }}" \
             -F "max_panel_version=${{ steps.metadata.outputs.max_panel_version }}" \
             -F "team_uuid=${TEAM_UUID}")
-
-          # Cleanup temp file
-          rm -f "${DEP_TEMP}"
 
           HTTP_CODE=$(echo "${RESPONSE}" | tail -n1)
           BODY=$(echo "${RESPONSE}" | sed '$d')
